Runtime/c/plugin/events.h


typedef struct {
    uint32_t pathLength; 
} PackedAudioLoadEvent;
typedef struct {
    uint64_t audioId; 
} PackedAudioLoadedEvent;
typedef struct {
    uint64_t audioId; 
} PackedAudioPauseEvent;
typedef struct {
    uint64_t audioId; 
} PackedAudioPlayEvent;
typedef struct {
    float volume; 
} PackedAudioSetMasterVolumeEvent;
typedef struct {
    uint64_t audioId; 
    float volume; 
    uint32_t _padding; 
} PackedAudioSetVolumeEvent;
typedef struct {
    uint8_t _unused; 
} PackedAudioStopAllEvent;
typedef struct {
    uint64_t audioId; 
} PackedAudioStopEvent;
typedef struct {
    uint64_t audioId; 
} PackedAudioUnloadEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
} PackedCameraFollowEntityEvent;
typedef struct {
    double deltaX; 
    double deltaY; 
} PackedCameraMoveEvent;
typedef struct {
    double positionX; 
    double positionY; 
} PackedCameraSetPositionEvent;
typedef struct {
    double angleInRadians; 
} PackedCameraSetRotationEvent;
typedef struct {
    double zoom; 
} PackedCameraSetZoomEvent;
typedef struct {
    uint8_t _unused; 
} PackedCameraStopFollowingEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double z; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint8_t isScreenSpace; 
    uint8_t _padding[3]; 
    float x1; 
    float y1; 
    float x2; 
    float y2; 
} PackedGeomAddLineEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double z; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint8_t isScreenSpace; 
    uint16_t _padding; 
    uint32_t primitiveType; 
    uint32_t count; 
} PackedGeomAddPackedHeaderEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double z; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint8_t isScreenSpace; 
    uint8_t _padding[3]; 
    float x; 
    float y; 
} PackedGeomAddPointEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double z; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint8_t isScreenSpace; 
    uint8_t _padding[3]; 
    float x; 
    float y; 
    float w; 
    float h; 
} PackedGeomAddRectEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
} PackedGeomRemoveEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint32_t _padding; 
} PackedGeomSetColorEvent;
typedef struct {
    int32_t scancode; 
    uint32_t keycode; 
    uint16_t mod; 
    uint8_t isRepeat; 
    uint8_t _padding; 
} PackedKeyEvent;
typedef struct {
    float x; 
    float y; 
    uint8_t button; 
    uint8_t clicks; 
    uint16_t _padding; 
} PackedMouseButtonEvent;
typedef struct {
    float x; 
    float y; 
    float xrel; 
    float yrel; 
} PackedMouseMotionEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
    uint8_t bodyType; 
    uint8_t shapeType; 
    uint8_t lockRotation; 
    uint8_t _padding[5]; 
    double mass; 
    double friction; 
    double elasticity; 
    double width; 
    double height; 
} PackedPhysicsAddBodyEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double forceX; 
    double forceY; 
} PackedPhysicsApplyForceEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double impulseX; 
    double impulseY; 
} PackedPhysicsApplyImpulseEvent;
typedef struct {
    int64_t id1_A; 
    int64_t id2_A; 
    int64_t id1_B; 
    int64_t id2_B; 
} PackedPhysicsCollisionEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
} PackedPhysicsRemoveBodyEvent;
typedef struct {
    uint8_t enabled; 
    uint8_t _padding[3]; 
} PackedPhysicsSetDebugModeEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
} PackedPhysicsSetPositionEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double angleInRadians; 
} PackedPhysicsSetRotationEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double velocityX; 
    double velocityY; 
} PackedPhysicsSetVelocityEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
    double angle; 
    double velocityX; 
    double velocityY; 
    double angularVelocity; 
    uint8_t isSleeping; 
    uint8_t _padding[7]; 
} PackedPhysicsSyncTransformEvent;
typedef struct {
    uint8_t eventId; 
    uint8_t _padding; 
} PackedPluginEventStackingEvent;
typedef struct {
    uint32_t channelNo; 
    uint32_t pathLength; 
} PackedPluginLoadHeaderEvent;
typedef struct {
    uint8_t eventId; 
} PackedPluginOnEvent;
typedef struct {
    uint8_t pluginId; 
} PackedPluginSetEvent;
typedef struct {
    uint8_t pluginId; 
    uint8_t _padding[3]; 
    uint32_t channelNo; 
} PackedPluginSubscribeEvent;
typedef struct {
    uint8_t pluginId; 
} PackedPluginUnloadEvent;
typedef struct {
    uint8_t pluginId; 
    uint8_t _padding[3]; 
    uint32_t channelNo; 
} PackedPluginUnsubscribeEvent;
typedef struct {
    uint32_t channelNo; 
    uint32_t _padding; 
} PackedScriptSubscribeEvent;
typedef struct {
    uint32_t channelNo; 
    uint32_t _padding; 
} PackedScriptUnsubscribeEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
    double positionZ; 
    double scaleX; 
    double scaleY; 
    double scaleZ; 
    double sizeW; 
    double sizeH; 
    double rotationX; 
    double rotationY; 
    double rotationZ; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint32_t _padding; 
    double speedX; 
    double speedY; 
} PackedSpriteAddEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint32_t _padding; 
} PackedSpriteColorEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
    double positionZ; 
} PackedSpriteMoveEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
} PackedSpriteRemoveEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double sizeW; 
    double sizeH; 
} PackedSpriteResizeEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double rotationX; 
    double rotationY; 
    double rotationZ; 
} PackedSpriteRotateEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double scaleX; 
    double scaleY; 
    double scaleZ; 
} PackedSpriteScaleEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    float x; 
    float y; 
    float w; 
    float h; 
} PackedSpriteSetSourceRectEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double speedX; 
    double speedY; 
} PackedSpriteSpeedEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    uint64_t textureId; 
} PackedSpriteTextureSetEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    double positionX; 
    double positionY; 
    double positionZ; 
    uint8_t r; 
    uint8_t g; 
    uint8_t b; 
    uint8_t a; 
    uint32_t _padding1; 
    float fontSize; 
    uint32_t fontPathLength; 
    uint32_t textLength; 
    uint32_t _padding2; 
} PackedTextAddEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    uint32_t textLength; 
    uint32_t _padding; 
} PackedTextSetStringEvent;
typedef struct {
    int64_t id1; 
    int64_t id2; 
    uint32_t filenameLength; 
    uint32_t _padding; 
} PackedTextureLoadHeaderEvent;
typedef struct {
    uint64_t flags; 
} PackedWindowFlagsEvent;
typedef struct {
    int32_t w; 
    int32_t h; 
} PackedWindowResizeEvent;
typedef struct {
    char title[256]; 
} PackedWindowTitleEvent;