Runtime/zig/plugin/src/phrost.zig

// !!! THIS FILE IS AUTO-GENERATED BY ZigAdapter.php, DO NOT EDIT !!!
// Generated from: structs.json

const std = @import("std");
pub const Channels = enum(u32) {
    renderer = 0,
    input = 1,
    physics = 2,
    audio = 3,
    gui = 4,
    window = 5,
    script = 6,
};

pub const Events = enum(u32) {
    spriteAdd = 0,
    spriteRemove = 1,
    spriteMove = 2,
    spriteScale = 3,
    spriteResize = 4,
    spriteRotate = 5,
    spriteColor = 6,
    spriteSpeed = 7,
    spriteTextureLoad = 8,
    spriteTextureSet = 9,
    spriteSetSourceRect = 10,
    geomAddPoint = 50,
    geomAddLine = 51,
    geomAddRect = 52,
    geomAddFillRect = 53,
    geomAddPacked = 54,
    geomRemove = 55,
    geomSetColor = 56,

    inputKeyup = 100,
    inputKeydown = 101,
    inputMouseup = 102,
    inputMousedown = 103,
    inputMousemotion = 104,

    windowTitle = 200,
    windowResize = 201,
    windowFlags = 202,

    textAdd = 300,
    textSetString = 301,

    audioLoad = 400,
    audioLoaded = 401,
    audioPlay = 402,
    audioStopAll = 403,
    audioSetMasterVolume = 404,
    audioPause = 405,
    audioStop = 406,
    audioUnload = 407,
    audioSetVolume = 408,

    physicsAddBody = 500,
    physicsRemoveBody = 501,
    physicsApplyForce = 502,
    physicsApplyImpulse = 503,
    physicsSetVelocity = 504,
    physicsSetPosition = 505,
    physicsSetRotation = 506,
    physicsCollisionBegin = 550,
    physicsCollisionSeparate = 551,
    physicsSyncTransform = 552,
    physicsSetDebugMode = 553,

    plugin = 1000,
    pluginLoad = 1001,
    pluginUnload = 1002,
    pluginSet = 1003,
    pluginEventStacking = 1004,
    pluginSubscribeEvent = 1005,
    pluginUnsubscribeEvent = 1006,

    cameraSetPosition = 2000,
    cameraMove = 2001,
    cameraSetZoom = 2002,
    cameraSetRotation = 2003,
    cameraFollowEntity = 2004,
    cameraStopFollowing = 2005,

    scriptSubscribe = 3000,
    scriptUnsubscribe = 3001,
};

pub const PackedAudioLoadEvent = extern struct {
    pathLength: u32,
};

pub const PackedAudioLoadedEvent = extern struct {
    audioId: u64,
};

pub const PackedAudioPauseEvent = extern struct {
    audioId: u64,
};

pub const PackedAudioPlayEvent = extern struct {
    audioId: u64,
};

pub const PackedAudioSetMasterVolumeEvent = extern struct {
    volume: f32,
};

pub const PackedAudioSetVolumeEvent = extern struct {
    audioId: u64,
    volume: f32,
    _padding: u32,
};

pub const PackedAudioStopAllEvent = extern struct {
    _unused: u8,
};

pub const PackedAudioStopEvent = extern struct {
    audioId: u64,
};

pub const PackedAudioUnloadEvent = extern struct {
    audioId: u64,
};

pub const PackedCameraFollowEntityEvent = extern struct {
    id1: i64,
    id2: i64,
};

pub const PackedCameraMoveEvent = extern struct {
    deltaX: f64,
    deltaY: f64,
};

pub const PackedCameraSetPositionEvent = extern struct {
    positionX: f64,
    positionY: f64,
};

pub const PackedCameraSetRotationEvent = extern struct {
    angleInRadians: f64,
};

pub const PackedCameraSetZoomEvent = extern struct {
    zoom: f64,
};

pub const PackedCameraStopFollowingEvent = extern struct {
    _unused: u8,
};

pub const PackedGeomAddLineEvent = extern struct {
    id1: i64,
    id2: i64,
    z: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    isScreenSpace: u8,
    _padding: [3]u8,
    x1: f32,
    y1: f32,
    x2: f32,
    y2: f32,
};

pub const PackedGeomAddPackedHeaderEvent = extern struct {
    id1: i64,
    id2: i64,
    z: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    isScreenSpace: u8,
    _padding: u16,
    primitiveType: u32,
    count: u32,
};

pub const PackedGeomAddPointEvent = extern struct {
    id1: i64,
    id2: i64,
    z: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    isScreenSpace: u8,
    _padding: [3]u8,
    x: f32,
    y: f32,
};

pub const PackedGeomAddRectEvent = extern struct {
    id1: i64,
    id2: i64,
    z: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    isScreenSpace: u8,
    _padding: [3]u8,
    x: f32,
    y: f32,
    w: f32,
    h: f32,
};

pub const PackedGeomRemoveEvent = extern struct {
    id1: i64,
    id2: i64,
};

pub const PackedGeomSetColorEvent = extern struct {
    id1: i64,
    id2: i64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    _padding: u32,
};

pub const PackedKeyEvent = extern struct {
    scancode: i32,
    keycode: u32,
    mod: u16,
    isRepeat: u8,
    _padding: u8,
};

pub const PackedMouseButtonEvent = extern struct {
    x: f32,
    y: f32,
    button: u8,
    clicks: u8,
    _padding: u16,
};

pub const PackedMouseMotionEvent = extern struct {
    x: f32,
    y: f32,
    xrel: f32,
    yrel: f32,
};

pub const PackedPhysicsAddBodyEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
    bodyType: u8,
    shapeType: u8,
    lockRotation: u8,
    _padding: [5]u8,
    mass: f64,
    friction: f64,
    elasticity: f64,
    width: f64,
    height: f64,
};

pub const PackedPhysicsApplyForceEvent = extern struct {
    id1: i64,
    id2: i64,
    forceX: f64,
    forceY: f64,
};

pub const PackedPhysicsApplyImpulseEvent = extern struct {
    id1: i64,
    id2: i64,
    impulseX: f64,
    impulseY: f64,
};

pub const PackedPhysicsCollisionEvent = extern struct {
    id1_A: i64,
    id2_A: i64,
    id1_B: i64,
    id2_B: i64,
};

pub const PackedPhysicsRemoveBodyEvent = extern struct {
    id1: i64,
    id2: i64,
};

pub const PackedPhysicsSetDebugModeEvent = extern struct {
    enabled: u8, // 1 to enable debug drawing, 0 to disable.
    _padding: [3]u8, // Padding for 4-byte alignment.
};

pub const PackedPhysicsSetPositionEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
};

pub const PackedPhysicsSetRotationEvent = extern struct {
    id1: i64,
    id2: i64,
    angleInRadians: f64,
};

pub const PackedPhysicsSetVelocityEvent = extern struct {
    id1: i64,
    id2: i64,
    velocityX: f64,
    velocityY: f64,
};

pub const PackedPhysicsSyncTransformEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
    angle: f64,
    velocityX: f64,
    velocityY: f64,
    angularVelocity: f64,
    isSleeping: u8,
    _padding: [7]u8,
};

pub const PackedPluginEventStackingEvent = extern struct {
    eventId: u8,
    _padding: u8,
};

pub const PackedPluginLoadHeaderEvent = extern struct {
    channelNo: u32,
    pathLength: u32,
};

pub const PackedPluginOnEvent = extern struct {
    eventId: u8,
};

pub const PackedPluginSetEvent = extern struct {
    pluginId: u8,
};

pub const PackedPluginSubscribeEvent = extern struct {
    pluginId: u8,
    _padding: [3]u8,
    channelNo: u32,
};

pub const PackedPluginUnloadEvent = extern struct {
    pluginId: u8,
};

pub const PackedPluginUnsubscribeEvent = extern struct {
    pluginId: u8,
    _padding: [3]u8,
    channelNo: u32,
};

pub const PackedScriptSubscribeEvent = extern struct {
    channelNo: u32,
    _padding: u32,
};

pub const PackedScriptUnsubscribeEvent = extern struct {
    channelNo: u32,
    _padding: u32,
};

pub const PackedSpriteAddEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
    positionZ: f64,
    scaleX: f64,
    scaleY: f64,
    scaleZ: f64,
    sizeW: f64,
    sizeH: f64,
    rotationX: f64,
    rotationY: f64,
    rotationZ: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    _padding: u32,
    speedX: f64,
    speedY: f64,
};

pub const PackedSpriteColorEvent = extern struct {
    id1: i64,
    id2: i64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    _padding: u32,
};

pub const PackedSpriteMoveEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
    positionZ: f64,
};

pub const PackedSpriteRemoveEvent = extern struct {
    id1: i64,
    id2: i64,
};

pub const PackedSpriteResizeEvent = extern struct {
    id1: i64,
    id2: i64,
    sizeW: f64,
    sizeH: f64,
};

pub const PackedSpriteRotateEvent = extern struct {
    id1: i64,
    id2: i64,
    rotationX: f64,
    rotationY: f64,
    rotationZ: f64,
};

pub const PackedSpriteScaleEvent = extern struct {
    id1: i64,
    id2: i64,
    scaleX: f64,
    scaleY: f64,
    scaleZ: f64,
};

pub const PackedSpriteSetSourceRectEvent = extern struct {
    id1: i64,
    id2: i64,
    x: f32,
    y: f32,
    w: f32,
    h: f32,
};

pub const PackedSpriteSpeedEvent = extern struct {
    id1: i64,
    id2: i64,
    speedX: f64,
    speedY: f64,
};

pub const PackedSpriteTextureSetEvent = extern struct {
    id1: i64,
    id2: i64,
    textureId: u64,
};

pub const PackedTextAddEvent = extern struct {
    id1: i64,
    id2: i64,
    positionX: f64,
    positionY: f64,
    positionZ: f64,
    r: u8,
    g: u8,
    b: u8,
    a: u8,
    _padding1: u32,
    fontSize: f32,
    fontPathLength: u32,
    textLength: u32,
    _padding2: u32,
};

pub const PackedTextSetStringEvent = extern struct {
    id1: i64,
    id2: i64,
    textLength: u32,
    _padding: u32,
};

pub const PackedTextureLoadHeaderEvent = extern struct {
    id1: i64,
    id2: i64,
    filenameLength: u32,
    _padding: u32,
};

pub const PackedWindowFlagsEvent = extern struct {
    flags: u64,
};

pub const PackedWindowResizeEvent = extern struct {
    w: i32,
    h: i32,
};

pub const PackedWindowTitleEvent = extern struct {
    title: @Vector(256, u8),
};
